--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="shortcut icon" href="/favicon-terminal.ico" type="image/x-icon" />
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -59,7 +60,7 @@
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">Sectionalize.</h1>
+  	<h1 class="text-center v-center">Jake Beinart</h1>
  	
   	<div class="container">
       <div class="row">
