--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">JB</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="#section1">What</a></li>
-        <li><a href="#section2">When</a></li>
-        <li><a href="#section3">How</a></li>
-        <li><a href="#section4">Four</a></li>
+        <li><a href="#section1">Education</a></li>
+        <li><a href="#section2">Experience</a></li>
+        <li><a href="#section3">Personal</a></li>
+        <li><a href="#section4">Contact</a></li>
         <li><a href="#section5">Five</a></li>
         <li><a href="#section6">Why</a></li>
         <li><a href="#section7">Who</a></li>
@@ -50,8 +50,6 @@
                 <li><a href="#">Category 5</a></li> 
               </ul>
             </div>
-            <input type="text" class="form-control" placeholder="What are searching for?">
-            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> </span>
           </div>
         </div>
       </form>
@@ -259,13 +257,6 @@
        <i class="fa fa-instagram fa-4x"></i>
       </div>
   </div><!--/row-->
-  <div class="row">
-  	<div class="col-md-12 text-center">
-      <br><br>
-      <p>
-    	<a href="http://www.bootstrapzero.com/bootstrap-template/sectionalize">Get the code for this template.</a>
-      </p>
-    </div>
   </div>
 </section>
 
@@ -282,30 +273,12 @@
           </ul> 
         </div>
       <div class="col-xs-6 col-md-3 column">          
-          <h4>Follow Us</h4>
+          <h4>Cantact Me</h4>
           <ul class="nav">
             <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://www.facebook.com/jake.beinart">Facebook</a></li>
             <li><a href="#">Google+</a></li>
-            <li><a href="#">Pinterest</a></li>
-          </ul> 
-      </div>
-      <div class="col-xs-6 col-md-3 column">          
-          <h4>Contact Us</h4>
-          <ul class="nav">
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Headquarters</a></li>
-            <li><a href="#">Management</a></li>
-            <li><a href="#">Support</a></li>
-          </ul> 
-      </div>
-      <div class="col-xs-6 col-md-3 column">          
-          <h4>Customer Service</h4>
-          <ul class="nav">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="www.linkedin.com/pub/jake-beinart/a4/524/ab2/">LinkedIn</a></li>
           </ul> 
       </div>
     </div><!--/row-->
