--- a/index.html
+++ b/index.html
@@ -37,22 +37,6 @@
         <li><a href="#section7">Who</a></li>
         <li>&nbsp;</li>
       </ul>
-      <form class="navbar-form">
-        <div class="form-group" style="display:inline;">
-          <div class="input-group"> 
-            <div class="input-group-btn">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-chevron-down"></span></button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Category 1</a></li>
-                <li><a href="#">Category 2</a></li>
-                <li><a href="#">Category 3</a></li>
-                <li><a href="#">Category 4</a></li>
-                <li><a href="#">Category 5</a></li> 
-              </ul>
-            </div>
-          </div>
-        </div>
-      </form>
     </div>
   </div>
 </nav>
@@ -273,12 +257,12 @@
           </ul> 
         </div>
       <div class="col-xs-6 col-md-3 column">          
-          <h4>Cantact Me</h4>
+          <h4>Contact Me</h4>
           <ul class="nav">
             <li><a href="#">Twitter</a></li>
             <li><a href="https://www.facebook.com/jake.beinart">Facebook</a></li>
             <li><a href="#">Google+</a></li>
-            <li><a href="www.linkedin.com/pub/jake-beinart/a4/524/ab2/">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/pub/jake-beinart/a4/524/ab2/">LinkedIn</a></li>
           </ul> 
       </div>
     </div><!--/row-->
