Add content to first 2 sections

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="#section1">Education</a></li>
-        <li><a href="#section2">Experience</a></li>
-        <li><a href="#section3">Personal</a></li>
-        <li><a href="#section4">Contact</a></li>
+        <li><a href="#section1">About</a></li>
+        <li><a href="#section2">Education</a></li>
+        <li><a href="#section3">Experience</a></li>
+        <li><a href="#section4">Personal</a></li>
         <li><a href="#section5">Five</a></li>
         <li><a href="#section6">Why</a></li>
         <li><a href="#section7">Who</a></li>
@@ -42,23 +42,23 @@
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h1 class="text-center v-center">Jake Beinart</h1>
+  	<h1 class="text-center v-center">About Jake</h1>
  	
   	<div class="container">
       <div class="row">
           <div class="col-sm-4">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Robust</h3><p>There is other content and snippets of details or features that can be placed here..</p><i class="fa fa-cog fa-5x"></i></div>
+              <div class="col-sm-10 col-sm-offset-2 text-center"><h3>Student</h3><p>I'm currently a sophomore at Missouri University of Science and Technology majoring in computer science.</p><i class="fa fa-graduation-cap fa-5x"></i></div>
             </div>
           </div>
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Simple</h3><p>You may also want to create content that compells users to scroll down more..</p><i class="fa fa-user fa-5x"></i></div>
+              <div class="col-sm-10 col-sm-offset-1 text-center"><h3>Programmer</h3><p>Programming has been a hobby as much as a career path for me. This website is an example!</p><i class="fa fa-code fa-5x"></i></div>
             </div>
           </div>
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 text-center"><h3>Clean</h3><p>In the first 30 seconds of a user's visit to your site they decide if they're going to stay..</p><i class="fa fa-mobile fa-5x"></i></div>
+              <div class="col-sm-10 text-center"><h3>Something else</h3><p>I don't really know what to put here so I'll leave it here</p><i class="fa fa-mobile fa-5x"></i></div>
             </div>
           </div>
       </div><!--/row-->
@@ -69,12 +69,11 @@
 <section class="container-fluid" id="section2">
   <div class="row">
   	<div class="col-sm-8 col-sm-offset-2 text-center">
-        <h1>What is Bootstrap?</h1>
+        <h1>Education</h1>
         <br>
 		<p class="lead">Bootstrap is a free collection of tools for creating websites and web applications. It contains HTML and CSS-based design templates for typography, forms, buttons, navigation and other interface components, as well as optional JavaScript extensions. It is the No.1 project on GitHub with 65,000+ stars and 23,800 forks (as of March 2014) [1] and has been used by NASA and MSNBC, among many others..</p>
         <br> 
-      	<i style="font-size:120px" class="fa fa-camera fa-5x"></i>
-      	<p>Big 'ol Camera Icon</p>
+      	<img src="images/mst.png" style="width:120px;height:120px;">
     </div>
   </div>
 </section>
