--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
   	<div class="col-sm-8 col-sm-offset-2 text-center">
         <h1>Education</h1>
         <br>
-		<p class="lead">Bootstrap is a free collection of tools for creating websites and web applications. It contains HTML and CSS-based design templates for typography, forms, buttons, navigation and other interface components, as well as optional JavaScript extensions. It is the No.1 project on GitHub with 65,000+ stars and 23,800 forks (as of March 2014) [1] and has been used by NASA and MSNBC, among many others..</p>
+		<p class="lead">I graduated from Lindbergh High School in Saint Louis in 2014 where I developed a taste for math and science. I took Project Lead the Way
+				courses for two years where I took an interest in engineering and programming. Missouri S&T was the next step for a Missourian interested in engineering.
+				I'm currently a sophomore in Computer Science and seeking every opportunity to advance myprogramming knowledge.</p>
         <br> 
-      	<img src="images/mst.png" style="width:120px;height:120px;">
+      	<img src="images/mst.png" style="width:250px;height:200px;">
     </div>
   </div>
 </section>
