--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <h1>Education</h1>
         <br>
 		<p class="lead">I graduated from Lindbergh High School in Saint Louis in 2014 where I developed a taste for math and science as well as playing tennis and running cross country. I took Project Lead the Way
-				courses for two years there in which I took an interest in engineering and programming.</p>
-				<p> Missouri S&T was the next step for a Missourian interested in engineering.
+				courses for two years there in which I took an interest in engineering and programming.
+				<br> Missouri S&T was the next step for a Missourian interested in engineering.
 				I'm currently a sophomore in Computer Science and seeking every opportunity to advance my programming knowledge.</p>
         <br> 
-      	<img src="images/mst.png" style="width:250px;height:200px;padding:50px;">
+      	<img src="images/mst.png" style="width:250px;height:200px;">
     </div>
   </div>
 </section>
