--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="row">
       <!--fontawesome icons-->
       <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
-       <i class="fa fa-github fa-4x"></i>
+       <a href="https://github.com/jakebeinart/" class="fa fa-github fa-4x">
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
        <i class="fa fa-foursquare fa-4x"></i>
