--- a/index.html
+++ b/index.html
@@ -219,16 +219,14 @@
     <div class="row">
       <!--fontawesome icons-->
       <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
-       <a href="https://github.com/jakebeinart/" class="fa fa-github fa-4x"></a>
+       <a href="https://github.com/jakebeinart/">
+       	<i class="fa fa-github fa-4x"></i>
+       </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-foursquare fa-4x"></i>
-      </div>
-      <div class="col-sm-1 col-xs-4 text-center">
+      <a href="https://www.facebook.com/jake.beinart">
        	<i class="fa fa-facebook fa-4x"></i>
-      </div>
-      <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-pinterest fa-4x"></i>
+      </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
        <i class="fa fa-google-plus fa-4x"></i>
@@ -237,10 +235,9 @@
        <i class="fa fa-twitter fa-4x"></i>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-dribbble fa-4x"></i>
-      </div>
-      <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-instagram fa-4x"></i>
+      	<a href="https://instagram.com/jakebei/">
+	 <i class="fa fa-instagram fa-4x"></i>
+	</a>
       </div>
   </div><!--/row-->
   </div>
