--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
     <div class="row">
       <!--fontawesome icons-->
       <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
-       <a href="https://github.com/jakebeinart/">
+       <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
        	<i class="fa fa-github fa-4x"></i>
        </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
-      <a href="https://www.facebook.com/jake.beinart">
+      <a href="https://www.facebook.com/jake.beinart" style="color: #fff; text-decoration: none;">
        	<i class="fa fa-facebook fa-4x"></i>
       </a>
       </div>
@@ -235,7 +235,7 @@
        <i class="fa fa-twitter fa-4x"></i>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
-      	<a href="https://instagram.com/jakebei/">
+      	<a href="https://instagram.com/jakebei/" style="color: #fff; text-decoration: none;">
 	 <i class="fa fa-instagram fa-4x"></i>
 	</a>
       </div>
