--- a/index.html
+++ b/index.html
@@ -220,23 +220,22 @@
       <!--fontawesome icons-->
       <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
        <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
-       	<i class="fa fa-github fa-4x"></i>
+       	<i class="fa fa-github fa-7x"></i>
        </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
       <a href="https://www.facebook.com/jake.beinart" style="color: #fff; text-decoration: none;">
-       	<i class="fa fa-facebook fa-4x"></i>
+       	<i class="fa fa-facebook fa-7x"></i>
       </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-google-plus fa-4x"></i>
-      </div>
-      <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-twitter fa-4x"></i>
+      <a href="https://www.linkedin.com/pub/jake-beinart/a4/524/ab2/" style="color: #fff; text-decoration: none;">
+       <i class="fa fa-linkedin fa-7x"></i>
+      </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
       	<a href="https://instagram.com/jakebei/" style="color: #fff; text-decoration: none;">
-	 <i class="fa fa-instagram fa-4x"></i>
+	 <i class="fa fa-instagram fa-7x"></i>
 	</a>
       </div>
   </div><!--/row-->
