--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <!--fontawesome icons-->
       <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
        <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
-       	<i class="fa fa-github fa-5x"></i>
+       	<i class="fa fa-github fa-5x fa-border" ></i>
        </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
