--- a/index.html
+++ b/index.html
@@ -216,24 +216,24 @@
 
 <section class="container" id="section5">
 	<h1 class="text-center">Contact or Follow Me!</h1>
-    <div class="row">
+    <div class="row-fluid">
       <!--fontawesome icons-->
-      <div class="col-sm-1 col-sm-offset-2 col-xs-4 text-center">
+      <div class="span4">
        <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
        	<i class="fa fa-github fa-5x fa-border" ></i>
        </a>
       </div>
-      <div class="col-sm-1 col-xs-4 text-center">
+      <div class="span4">
       <a href="https://www.facebook.com/jake.beinart" style="color: #fff; text-decoration: none;">
        	<i class="fa fa-facebook fa-5x"></i>
       </a>
       </div>
-      <div class="col-sm-1 col-xs-4 text-center">
+      <div class="span4">
       <a href="https://www.linkedin.com/pub/jake-beinart/a4/524/ab2/" style="color: #fff; text-decoration: none;">
        <i class="fa fa-linkedin fa-5x"></i>
       </a>
       </div>
-      <div class="col-sm-1 col-xs-4 text-center">
+      <div class="span4">
       	<a href="https://instagram.com/jakebei/" style="color: #fff; text-decoration: none;">
 	 <i class="fa fa-instagram fa-5x"></i>
 	</a>
