--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 <section class="container" id="section5">
 	<h1 class="text-center">Contact or Follow Me!</h1>
-    <div class="row-fluid">
+    <div class="row-fluid show-grid">
       <!--fontawesome icons-->
       <div class="span4">
        <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
