--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 </section>-->
 
 
-<section class="container" id="section5">
+<section class="container-fluid" id="section5">
 	<h1 class="text-center">Contact or Follow Me!</h1>
-    <div class="row-fluid show-grid">
+    <div class="row-fluid text-center">
       <!--fontawesome icons-->
       <div class="span4">
        <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
