--- a/index.html
+++ b/index.html
@@ -220,22 +220,22 @@
       <!--fontawesome icons-->
       <div class="span4">
        <a href="https://github.com/jakebeinart/" style="color: #fff; text-decoration: none;">
-       	<i class="fa fa-github fa-5" ></i>
+       	<i class="fa fa-github fa-5x fa-border" ></i>
        </a>
       </div>
       <div class="span4">
       <a href="https://www.facebook.com/jake.beinart" style="color: #fff; text-decoration: none;">
-       	<i class="fa fa-facebook fa-5"></i>
+       	<i class="fa fa-facebook fa-5x fa-border"></i>
       </a>
       </div>
       <div class="span4">
       <a href="https://www.linkedin.com/pub/jake-beinart/a4/524/ab2/" style="color: #fff; text-decoration: none;">
-       <i class="fa fa-linkedin fa-5"></i>
+       <i class="fa fa-linkedin fa-5x fa-border"></i>
       </a>
       </div>
       <div class="span4">
       	<a href="https://instagram.com/jakebei/" style="color: #fff; text-decoration: none;">
-	 <i class="fa fa-instagram fa-5"></i>
+	 <i class="fa fa-instagram fa-5x fa-border"></i>
 	</a>
       </div>
   </div><!--/row-->
