--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </section>
 
 <section class="container-fluid" id="section3">
-	<h1 class="text-center">Bootstrap is Responsive</h1>
+	<h1 class="text-center">Experience</h1>
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h3 class="text-center">Vertical scrolling has become a popular and lasting trend in Web design.</h3>
@@ -89,19 +89,15 @@
           <div class="col-xs-2"></div>
           <div class="col-xs-4 text-right">Anyhoo, this is just some random blurb of text, and Bootply.com is a playground and code editor for Bootstrap.</div>
         </div>
-        <p class="text-center">
-          <img src="/assets/example/img_mtnpeople.png" class="img-responsive center-block ">
-        </p>
       </div>
    </div>
 </section>
 
 <section class="container-fluid" id="section4">
-	<h2 class="text-center">Change this Content. Change the world.</h2>
+	<h2 class="text-center">Personal</h2>
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
-      <img src="/assets/example/bg_smartphones.jpg" class="img-responsive center-block ">
-      <p class="text-center">Images will scale down proportionately as browser width narrows.</p>
+      	<p class="text-center">Images will scale down proportionately as browser width narrows.</p>
       </div>
     </div>
 </section>
