--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 <section class="container-fluid" id="section4">
 	<h2 class="text-center">Personal</h2>
     <div class="row">
-      <div class="col-sm-8 col-sm-offset-2">
+      <div class="col-sm-4 col-sm-offset-2" style="background-color: gray">
+      	<p class="text-center">Images will scale down proportionately as browser width narrows.</p>
+      </div>
+      <div class="col-sm-4 col-sm-offset-2" style="background-color: gray">
       	<p class="text-center">Images will scale down proportionately as browser width narrows.</p>
       </div>
     </div>
