--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 <section class="container-fluid" id="section4">
 	<h2 class="text-center">Personal</h2>
     <div class="row">
-      <div class="col-sm-4 col-sm-offset-2" style="background-color: gray">
+      <div class="col-sm-4" style="background-color: #E6E6E6; color: white; border-radius: 15px;">
       	<p class="text-center">Images will scale down proportionately as browser width narrows.</p>
       </div>
-      <div class="col-sm-4 col-sm-offset-2" style="background-color: gray">
+      <div class="col-sm-4" style="background-color: #E6E6E6; color: white; border-radius: 15px;">
       	<p class="text-center">Images will scale down proportionately as browser width narrows.</p>
       </div>
     </div>
