--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <section class="container-fluid" id="section4">
 	<h2 class="text-center">Personal</h2>
-    <div class="row">
+    <div class="row-fluid">
       <div class="col-sm-4 col-sm-offset-1" style="background-color: #E6E6E6; border-radius: 15px;">
       	<h3 class="text-center">Images will scale down proportionately as browser width narrows.</p>
       </div>
