--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 <section class="container-fluid" id="section4">
 	<h2 class="text-center">Personal</h2>
     <div class="row-fluid">
-      <div class="col-sm-4 col-sm-offset-1" style="background-color: #E6E6E6; border-radius: 15px;">
-      	<h3 class="text-center">Images will scale down proportionately as browser width narrows.</p>
+      <div class="col-sm-4 col-sm-offset-1" style="background-color: #F2F2F2; border-radius: 15px;">
+      	<h3 class="text-center">Personal events will go here when I get it all set up</p>
       </div>
-      <div class="col-sm-4 col-sm-offset-1" style="background-color: #E6E6E6; border-radius: 15px;">
-      	<h3 class="text-center">Images will scale down proportionately as browser width narrows.</p>
+      <div class="col-sm-4 col-sm-offset-1" style="background-color: #F2F2F2; border-radius: 15px;">
+      	<h3 class="text-center">Personal events will go here when I get it all set up</p>
       </div>
     </div>
 </section>
