--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 	<h1 class="text-center">Experience</h1>
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <h3 class="text-center">Vertical scrolling has become a popular and lasting trend in Web design.</h3>
+        <h3 class="text-center">Filler text. Filler text. Filler text. Filler text. Filler text. Filler text. </h3>
         <div class="row">
-          <div class="col-xs-4 col-xs-offset-1">Some brand-tacular designs even have home page content that is taller that 12,000 pixels. That's a lotta content.</div>
+          <div class="col-xs-4 col-xs-offset-1">Filler text. Filler text. Filler text. Filler text. Filler text. Filler text. </div>
           <div class="col-xs-2"></div>
-          <div class="col-xs-4 text-right">Anyhoo, this is just some random blurb of text, and Bootply.com is a playground and code editor for Bootstrap.</div>
+          <div class="col-xs-4 text-right">Filler text. Filler text. Filler text. Filler text. Filler text. Filler text. Filler text. </div>
         </div>
       </div>
    </div>
