--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 
 <section class="container-fluid" id="section4">
 	<h2 class="text-center"><b>Personal</b></h2>
-    <div class="row-fluid row-centered">
-      <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px; padding: 50px;">
+    <div class="row-fluid row-centered" style="padding: 50px;">
+      <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Personal events will go here when I get it all set up</p>
       </div>
-      <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px; padding: 50px;">
+      <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Personal events will go here when I get it all set up</p>
       </div>
     </div>
