--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 	<h2 class="text-center"><b>Personal</b></h2>
     <div class="row-fluid row-centered">
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
-      	<h3 class="text-center">Personal events will go here when I get it all set up</p>
+      	<h3 class="text-center">Florida Family Trip!</p>
+      	<img src="images/personal/FL1.jpg">
+      	<p>Every year my dad's side of the family goes to Florida together and I look forward to it each year.</p>
+      	<img src="images/personal/FL2.jpg">
       </div>
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Personal events will go here when I get it all set up</p>
