--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <div class="row-fluid row-centered">
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Florida Family Trip!</p>
-      	<img src="images/personal/FL1.jpg">
+      	<img src="images/personal/FL1.JPG">
       	<p>Every year my dad's side of the family goes to Florida together and I look forward to it each year.</p>
-      	<img src="images/personal/FL2.jpg">
+      	<img src="images/personal/FL2.JPG">
       </div>
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Personal events will go here when I get it all set up</p>
