--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="row-fluid row-centered">
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Florida Family Trip!</p>
-      	<img src="images/personal/FL1.JPG" class="rotate90" style="size: 30%;">
+      	<img src="images/personal/FL1.JPG" class="rotate90" style="height: 30%; width: 30%;">
       	<p>Every year my dad's side of the family goes to Florida together and I look forward to it each year.</p>
       	<img src="images/personal/FL2.JPG">
       </div>
