--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 	<h2 class="text-center"><b>Personal</b></h2>
     <div class="row-fluid row-centered">
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
-      	<h3 class="text-center">Florida Family Trip!</p>
-      	<img src="images/personal/FL1.JPG" class="rotate90" style="height: 30%; width: 30%;">
-      	<p>Every year my dad's side of the family goes to Florida together and I look forward to it each year.</p>
-      	<img src="images/personal/FL2.JPG">
+      	<h3 class="text-center">Florida Family Trip!</h3>
+      	<img src="images/personal/FL1.JPG" class="rotate90" style="height: 40%; width: 40%;">
+      	Every year my dad's side of the family goes to Florida together and I look forward to it each year.
+      	<img src="images/personal/FL2.JPG" class="rotate90" style="height: 40%; width: 40%;">
       </div>
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
-      	<h3 class="text-center">Personal events will go here when I get it all set up</p>
+      	<h3 class="text-center">Personal events will go here when I get it all set up</h3>
       </div>
     </div>
 </section>
