--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <div class="row-fluid row-centered">
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Florida Family Trip!</h3>
-      	<img src="images/personal/FL1.JPG" class="rotate90" style="height: 40%; width: 40%;">
-      	Every year my dad's side of the family goes to Florida together and I look forward to it each year.
-      	<img src="images/personal/FL2.JPG" class="rotate90" style="height: 40%; width: 40%;">
+      	<img src="images/personal/FL1.JPG" class="rotate90" style="height: 50%; width: 50%;">
+      	<p>Every year my dad's side of the family goes to Florida together and I look forward to it each year.</p>
+      	<img src="images/personal/FL2.JPG" style="height: 50%; width: 50%;">
       </div>
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Personal events will go here when I get it all set up</h3>
@@ -146,21 +146,11 @@
 <footer id="footer">
   <div class="container">
     <div class="row">    
-      <div class="col-xs-6 col-sm-6 col-md-3 column">          
-          <h4>Information</h4>
-          <ul class="nav">
-            <li><a href="about-us.html">Products</a></li>
-            <li><a href="about-us.html">Services</a></li>
-            <li><a href="about-us.html">Benefits</a></li>
-            <li><a href="elements.html">Developers</a></li>
-          </ul> 
-        </div>
       <div class="col-xs-6 col-md-3 column">          
           <h4>Contact Me</h4>
           <ul class="nav">
-            <li><a href="#">Twitter</a></li>
+            <li><a href="mailto:jsb8bd@mst.edu">Email</a></li>
             <li><a href="https://www.facebook.com/jake.beinart">Facebook</a></li>
-            <li><a href="#">Google+</a></li>
             <li><a href="https://www.linkedin.com/pub/jake-beinart/a4/524/ab2/">LinkedIn</a></li>
           </ul> 
       </div>
