--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
       	<h3 class="text-center">Florida Family Trip!</h3>
       	<img src="images/personal/FL1.JPG" class="rotate90" style="height: 50%; width: 50%;">
-      	<p>Every year my dad's side of the family goes to Florida together and I look forward to it each year.</p>
+      	<p>Every year my dad's side of the family goes to Florida together and it kicked off my summer of travels this year.</p>
       	<img src="images/personal/FL2.JPG" style="height: 50%; width: 50%;">
       </div>
       <div class="col-sm-4 col-centered" style="background-color: #F2F2F2; border-radius: 15px;">
